--- a/style.css
+++ b/style.css
@@ -1,201 +1,459 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+.container{
+  max-width: 1200px;
+  margin: auto;
+}
+header{
+  margin-top: 40px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 115px;
+}
+header img{
+  margin-right: 450px;
+width: 62px;
+height: 50.04px;
+}
+
+header ul{
+  list-style: none;
+  display: flex;
+  gap: 40px;
+  align-items:center ;
+}
+header ul a{
+    text-decoration: none;
+    color: rgb(126, 100, 180);
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 60px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+header > h1{
+  position: relative;
+    color: rgb(54, 54, 54);
+  font-family: Nunito;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 60px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+
+section{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 210px;
+}
+.sevtion_div_2 > img{
+  position: absolute;
+  z-index: -99;
+  right: 1000px;
   
-  body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    background-color: #f9f9f9;
-    color: #333;
-    padding: 20px;
+}
+.sevtion_div_2 > h1{
+    color: rgb(0, 0, 0);
+  font-family: Nunito;
+  font-size: 72px;
+  font-weight: 700;
+  line-height: 80px;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-left: 144px;
+  margin-bottom: 30px;
+}
+.sevtion_div_2 > p{
+    margin-left: 144px;
+    color: rgb(72, 72, 72);
+  font-family: Nunito;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 33px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+.hero2{
+  max-width: 985px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 75px;
+
+}
+
+.hero2 h1{
+  color: rgb(197, 197, 197);
+  font-family: Nunito;
+  font-size: 72px;
+  font-weight: 700;
+  line-height: 80px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: uppercase;
+}
+ .hero2 p{
+  font-family: Nunito;
+font-size: 24px;
+font-weight: 700;
+line-height: 32px;
+letter-spacing: 0%;
+text-align: left;
+color: rgb(132, 132, 132);
+ }
+
+ .hero2 span{
+  color: rgb(126, 100, 180);
+ }
+ .hero3{
+  max-width: 1100px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 2px solid rgb(126, 100, 180);;
+  border-radius: 2px;
+ }
+  .hero3 .yil{
+
+      color: rgb(0, 0, 0);
+  font-family: Nunito;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 60px;
+  letter-spacing: 0%;
+  text-align: left; 
+  margin-top: 8px;
   }
-  
-  .header {
+  .main1{
+    margin-bottom: 65px;
+  }
+  .main1 h1{
+        margin-top: 5px;
+        color: rgb(0, 0, 0);
+      font-family: Nunito;
+      font-size: 24px;
+      font-weight: 700;
+      line-height: 60px;
+      letter-spacing: 0%;
+      text-align: left;
+  }
+  .main1 p{
+    font-family: Nunito;
+font-size: 18px;
+font-weight: 400;
+line-height: 25px;
+letter-spacing: 0%;
+text-align: left;
+color: rgb(152, 152, 152);
+  }
+  .main1 p span{
+    color: rgb(126, 100, 180);
+  }
+
+  .main2 h1{
+    margin-bottom: 10px;
+    color: rgb(0, 0, 0);
+font-family: Nunito;
+font-size: 24px;
+font-weight: 700;
+line-height: 60px;
+letter-spacing: 0%;
+text-align: left;
+  }
+  .btn{
+    width: 363px;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 2px solid #ddd;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
-  }
-  .header img{
-    /* deco */
-position: absolute;
-left: 260px;
-top: 25px;
-  }
-
-  .header h1 {
-    color: #5a4eb2;
-  }
-  
-  .nav a {
-    margin-left: 20px;
-    text-decoration: none;
-    color: #5a4eb2;
-    font-weight: bold;
-  }
-  
-  .nav a:hover {
-    text-decoration: underline;
-  }
-  
-  .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .profile {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    max-width: 800px;   
-  }
-  
-  .profile-img {
-   
-    object-fit: cover;
-    margin-bottom: 20px;
-  }
-  .section-text{
-
-    margin-left: 150px;
-  }
-  section .profile h2{
-    color: #5a4eb2;
-    font-size: 1.8rem;
-    margin-bottom: 10px;
-  }
-  
- main .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  .experience-section {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  
-  .experience-header {
-    display: flex;
-    align-items: flex-start;
-    gap: 20px;
-  }
-  
-  .experience-title {
-    font-size: 3rem;
-    color: #999;
-  }
-  
-  .description {
-    font-size: 1rem;
-    color: #555;
-  }
-  
-  .description a {
-    color: #5a4eb2;
-    text-decoration: none;
-  }
-  
-  .description a:hover {
-    text-decoration: underline;
-  }
-  
-  .description span {
-    color: #5a4eb2;
-    font-weight: bold;
-  }
-  
-  .experience-details {
-    margin-top: 75px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  
-  .experience-item {
-    display: flex;
-    gap: 20px;
-    align-items: flex-start;
-  }
-  
-  .experience-item h3 {
-    font-size: 1.2rem;
-    color: #555;
-    width: 50px;
-    flex-shrink: 0;
-  }
-  
-  .experience-item h4 {
-    font-size: 1.5rem;
-    color: #5a4eb2;
-  }
-  
-  .skills h5 {
-    font-size: 1rem;
-    margin-top: 10px;
-  }
-  
-  .tags {
-    display: flex;
+    margin: 0  10px ;
     flex-wrap: wrap;
-    gap: 10px;
-    margin-top: 10px;
+    gap: 16px;
   }
-  
-  .tags span {
-    background: #5a4eb2;
-    color: #fff;
-    padding: 5px 10px;
-    border-radius: 20px;
-    font-size: 0.9rem;
-  }
-  
-  .tags span:hover {
-    background: #44369a;
-  }
-  
-  hr {
-    border: 0;
-    border-top: 1px solid  rgb(126, 100, 180)  ;
-    margin: 20px 0;
-  }
- 
-
-.education {
-    background: linear-gradient(180.00deg, rgb(126, 100, 180),rgb(34, 27, 51) 100%);;
-    max-width: 1512px;
-    height: 714px;
-    margin: auto;
-    text-align: left;
-}
-    
-
-.title {
+  .btn button{
+      border-radius: 10px;
+  background: rgb(126, 100, 180);
+  color: rgb(237, 237, 237);
   font-family: Nunito;
-  width: 10px;
-    font-size: 48px;
-    font-weight: bold;
-    color:rgb(197, 197, 197);
-    text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0%;
+  text-align: left;
+  padding: 6px 10px;
+  border-radius: 10px;
+  /* outline: none; */
+  border: none;  
+  }
+
+  .content {
+    margin-top: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* width: 1100px; */
+    max-width: 1100px;
+    background: linear-gradient(180.00deg, rgb(126, 100, 180),rgb(34, 27, 51) 100%);
 }
 
-.description{
-  text-align: left;
+.left {
   color: rgb(197, 197, 197);
-width: 750px;
-height: 10px;
-margin-top: 100px;
-font-family: Nunito;
-font-size: 18px;
-line-height: 25px;
-margin-left: 227px;
-margin-bottom: 100px ;
+  font-family: Nunito;
+  font-size: 96.98px;
+  font-weight: 700;
+  line-height: 107.76px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: uppercase;
+  margin-right: 300px;
+}
 
+.right {
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 900;
+  line-height: 25px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+.right p{
+  color: rgb(197, 197, 197);
+  font-size: 12px;
+}
+.right span {
+  color:rgb(244, 244, 244);
+}
+.container3 {
+  max-width: 1200px;
+  margin: auto;
+  padding-left: 10px; 
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 36px;
+}
+
+.container3 h1 {
+  color: rgb(197, 197, 197);
+  font-family: Nunito;
+  font-size: 96.98px;
+  font-weight: 700;
+  line-height: 132px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: uppercase;
+  margin-top: 42px;
+  margin-bottom: 37px;
+}
+
+.container3 .div1 {
+  margin-bottom: 81px;
+}
+
+.container3 .input .div1 h1 {
+  color: rgb(91, 91, 91);
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: uppercase;
+  margin-top: 65px;
+}
+
+.container3 .input .div1 input {
+  padding: 10px;
+  color: rgb(152, 152, 152);
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0%;
+  text-align: left;
+  border: 1px solid rgb(126, 100, 180);
+  border-radius: 4px;
+  background: rgb(255, 255, 255);
+  margin-bottom: 15px;
+  display: block;
+}
+
+.container3 .input .div1 textarea {
+  color: rgb(152, 152, 152);
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: capitalize;
+  border: 1px solid rgb(126, 100, 180);
+  border-radius: 4px;
+  background: rgb(255, 255, 255);
+  padding: 20px 10px;
+  display: block;
+}
+
+.container3 .input .div1 button {
+  padding: 9px 88px;
+  border-radius: 4px;
+  background: rgb(126, 100, 180);
+  margin-top: 15px;
+  outline: none;
+  border: none;
+  transition: all 0.5s ease;
+  border: 2px solid rgb(126, 100, 180)  ;
+}
+
+.container3 .input .div1 button:hover {
+  color: #000 ;
+  background-color: #fff;
+}
+
+.container3 .input .div1 button a {
+  color: rgb(237, 237, 237);
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 900;
+  line-height: 25px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: capitalize;
+  text-decoration: none;
+}
+
+.container3 .div2 {
+  position: relative;
+}
+
+.container3 .div2 h1 {
+  color: rgb(91, 91, 91);
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: uppercase;
+  margin-top: 63px;
+}
+
+.container3 .div2 ul {
+  list-style: none;
+}
+
+.container3 .div2 ul a {
+  text-decoration: none;
+  color: rgb(152, 152, 152);
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: capitalize;
+}
+
+.container3 .div2 ul li {
+  margin-left: 49px;
+  margin-bottom: 39px;
+}
+
+.container3 .div2 ul img {
+  width: 28px;
+  height: 28px;
+  position: absolute;
+  left: 10px;
+}
+
+.container3 .div3 {
+  text-align: center;
+  margin-right: 120px;
+} 
+
+.container3 .div3 h1 {
+  color: rgb(91, 91, 91);
+  font-family: Nunito;
+  font-size: 43px;
+  font-weight: 400;
+  line-height: 59px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: uppercase;
+  margin-bottom: 26px;
+}
+
+.container3 .div3 img {
+  background-blend-mode: 16px;
+}
+
+.container3 .div3 p {
+  color: rgb(152, 152, 152);
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0%;
+  text-transform: capitalize;
+}
+
+footer {
+  
+  width: 1100px;
+  max-width: 1200px;
+   position: absolute;
+  padding: 19px 0 25px 140px;
+  display: flex;
+  background-color: rgb(56, 45, 80);
+}
+
+footer h1 {
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 400;
+  color: rgb(237, 237, 237);
+  margin-right: 62px;
+}
+
+footer h1 span {
+  font-family: Nunito;
+  font-size: 12px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: rgb(132, 132, 132);
+}
+
+footer .divv h1 {
+  color: rgb(237, 237, 237);
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: capitalize;
+  margin-bottom: 15px;
+}
+
+footer .divv ul {
+  color: rgb(237, 237, 237);
+  font-family: Nunito;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: capitalize;
+  list-style: none;
+  display: flex;
+  gap: 6px;
+  flex-direction: column;
 }
